--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=root
+spring.datasource.password=ahmadbuba
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
